--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -80,7 +80,17 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.settings.verbosity = \"hint\"\n",
+    "ln.settings.verbosity = \"hint\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.transform.stem_uid = \"Nv48yAceNSh8\"\n",
+    "ln.transform.version = \"1\"\n",
     "ln.track()"
    ]
   },
@@ -164,13 +174,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = ln.Artifact.from_anndata(\n",
-    "    adata,\n",
-    "    field=bt.Gene.ensembl_gene_id,  # field to validate and link features\n",
-    "    key=\"scrna/conde22.h5ad\",  # optional: a relative path in your default storage\n",
-    "    description=\"Human immune cells from Conde22\",  # optional: a description\n",
-    "    organism=\"human\",  # or set globally: bt.settings.organism = \"human\"\n",
-    ")\n",
+    "artifact = ln.Artifact.from_anndata(adata, description=\"Human immune cells from Conde22\")\n",
     "artifact"
    ]
   },
@@ -185,6 +189,25 @@
    "outputs": [],
    "source": [
     "artifact.save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Link artifact to the features from AnnData object:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "artifact.features.add_from_anndata(\n",
+    "    var_field=bt.Gene.ensembl_gene_id,  # field to validate and link features in var index\n",
+    "    organism=\"human\",  # or set globally: bt.settings.organism = \"human\"\n",
+    "    )"
    ]
   },
   {
