--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -45,6 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ln.transform.stem_uid = \"Qr1kIHvK506r\"\n",
+    "ln.transform.version = \"1\"\n",
     "ln.track()"
    ]
   },
