--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -371,7 +371,7 @@
    "outputs": [],
    "source": [
     "artifact.save()\n",
-    "artifact.features.add_from_anndta(field=bt.Gene.ensembl_gene_id)\n",
+    "artifact.features.add_from_anndata(var_field=bt.Gene.ensembl_gene_id)\n",
     "artifact.labels.add(adata_validated.obs.cell_type, features.cell_type)\n",
     "artifact.labels.add(organism.human, feature=features.organism)\n",
     "artifact.labels.add(\n",
