--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -35,7 +35,17 @@
     "import bionty as bt\n",
     "\n",
     "ln.settings.verbosity = \"hint\"\n",
-    "bt.settings.auto_save_parents = False\n",
+    "bt.settings.auto_save_parents = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.transform.stem_uid = \"ManDYgmftZ8C\"\n",
+    "ln.transform.version = \"1\"\n",
     "ln.track()"
    ]
   },
@@ -343,8 +353,7 @@
    "source": [
     "artifact = ln.Artifact.from_anndata(\n",
     "    adata_validated,\n",
-    "    description=\"10x reference adata\",\n",
-    "    field=bt.Gene.ensembl_gene_id,\n",
+    "    description=\"10x reference adata\"\n",
     ")"
    ]
   },
@@ -362,6 +371,7 @@
    "outputs": [],
    "source": [
     "artifact.save()\n",
+    "artifact.features.add_from_anndata(var_field=bt.Gene.ensembl_gene_id)\n",
     "artifact.labels.add(adata_validated.obs.cell_type, features.cell_type)\n",
     "artifact.labels.add(organism.human, feature=features.organism)\n",
     "artifact.labels.add(\n",
