🚚 Replace .dev with .core

--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -402,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can convert identifiers by passing `return_field` to {meth}`~lamindb.dev.CanValidate.standardize`:"
+    "You can convert identifiers by passing `return_field` to {meth}`~lamindb.core.CanValidate.standardize`:"
    ]
   },
   {
