--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "Let us look at the standardized data of [Conde _et al._, Science (2022)](https://doi.org/10.1126/science.abl5197), available from [CZ CELLxGENE](https://cellxgene.cziscience.com/).\n",
     "\n",
-    "By calling {func}`~lamindb.dev.datasets.anndata_human_immune_cells`, we load a subsampled version of the [collection from CZ CELLxGENE](https://cellxgene.cziscience.com/collections/62ef75e4-cbea-454e-a0ce-998ec40223d3) and pre-populate the corresponding LaminDB registries: {class}`~lamindb.Feature`, {class}`~lamindb.ULabel`, {class}`~bionty.Gene`, {class}`~bionty.CellType`, {class}`~bionty.CellLine`, {class}`~bionty.ExperimentalFactor`."
+    "By calling {func}`~lamindb.core.datasets.anndata_human_immune_cells`, we load a subsampled version of the [collection from CZ CELLxGENE](https://cellxgene.cziscience.com/collections/62ef75e4-cbea-454e-a0ce-998ec40223d3) and pre-populate the corresponding LaminDB registries: {class}`~lamindb.Feature`, {class}`~lamindb.ULabel`, {class}`~bionty.Gene`, {class}`~bionty.CellType`, {class}`~bionty.CellLine`, {class}`~bionty.ExperimentalFactor`."
    ]
   },
   {
