--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -88,7 +88,7 @@
    "id": "5e348b32",
    "metadata": {},
    "source": [
-    "Let us create a [map-style dataset](https://pytorch.org/docs/stable/data) using using {meth}`~lamindb.Collection.mapped`: a {class}`~lamindb.dev.MappedCollection`. This is what, for example, the PyTorch `DataLoader` expects as an input.\n",
+    "Let us create a [map-style dataset](https://pytorch.org/docs/stable/data) using using {meth}`~lamindb.Collection.mapped`: a {class}`~lamindb.core.MappedCollection`. This is what, for example, the PyTorch `DataLoader` expects as an input.\n",
     "\n",
     "Under-the-hood, it performs a virtual inner join of the features of the underlying `AnnData` objects and thus allows to work with very large collections."
    ]
@@ -241,7 +241,7 @@
    "id": "11ea391d",
    "metadata": {},
    "source": [
-    "Close the connections in {class}`~lamindb.dev.MappedCollection`:"
+    "Close the connections in {class}`~lamindb.core.MappedCollection`:"
    ]
   },
   {
