--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -73,7 +73,7 @@
    },
    "outputs": [],
    "source": [
-    "adata = ln.dev.datasets.anndata_pbmc68k_reduced()\n",
+    "adata = ln.core.datasets.anndata_pbmc68k_reduced()\n",
     "adata"
    ]
   },
