--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -120,7 +120,7 @@
    },
    "outputs": [],
    "source": [
-    "adata = ln.dev.datasets.anndata_human_immune_cells(populate_registries=True)\n",
+    "adata = ln.core.datasets.anndata_human_immune_cells(populate_registries=True)\n",
     "adata"
    ]
   },
