🎨 Use validator for scrna

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -79,6 +79,7 @@
    "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
+    "from lamindb.validation import AnnDataValidator\n",
     "\n",
     "ln.settings.verbosity = \"hint\""
    ]
@@ -120,7 +121,7 @@
    },
    "outputs": [],
    "source": [
-    "adata = ln.core.datasets.anndata_human_immune_cells(populate_registries=True)\n",
+    "adata = ln.core.datasets.anndata_human_immune_cells()\n",
     "adata"
    ]
   },
@@ -128,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This `AnnData` object is standardized using the [CZI single-cell-curation validator](https://github.com/chanzuckerberg/single-cell-curation) with the same public ontologies that underlie {py:mod}`bionty`. Because registries are pre-populated, validation passes.\n",
+    "This `AnnData` object is standardized using the [CZI single-cell-curation validator](https://github.com/chanzuckerberg/single-cell-curation) with the same public ontologies that underlie {py:mod}`bionty`.\n",
     "\n",
     "```{note}\n",
     "\n",
@@ -138,10 +139,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validator = AnnDataValidator(adata, var_field=bt.Gene.ensembl_gene_id, obs_fields={\"donor\": ln.ULabel.name, \"tissue\": bt.Tissue.name, \"cell_type\": bt.CellType.name, \"assay\": bt.ExperimentalFactor.name}, organism=\"human\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validator.register_labels(\"variables\", validated_only=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validator.register_labels(\"all\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validator.validate()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The gene registry provides metadata for each of the 36k genes measured in the `AnnData`:"
+    "When we create a {class}`~lamindb.Artifact` object from an `AnnData`, we automatically annotate it with validated features and labels:"
    ]
   },
   {
@@ -154,128 +191,13 @@
    },
    "outputs": [],
    "source": [
-    "bt.Gene.df()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When we create a {class}`~lamindb.Artifact` object from an `AnnData`, we automatically link its features:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "artifact = ln.Artifact.from_anndata(adata, description=\"Human immune cells from Conde22\")\n",
-    "artifact"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "artifact.save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Link artifact to the features from AnnData object:"
+    "artifact = validator.register_artifact(description=\"Human immune cells from Conde22\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "artifact.features.add_from_anndata(\n",
-    "    var_field=bt.Gene.ensembl_gene_id,  # field to validate and link features in var index\n",
-    "    organism=\"human\",  # or set globally: bt.settings.organism = \"human\"\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The artifact has 2 linked feature sets, one for measured genes and one for measured metadata:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "artifact.features"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's now annotate the artifact with labels:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "experimental_factors = bt.ExperimentalFactor.lookup()\n",
-    "organism = bt.Organism.lookup()\n",
-    "features = ln.Feature.lookup()\n",
-    "\n",
-    "artifact.labels.add(organism.human, feature=features.organism)\n",
-    "artifact.labels.add(\n",
-    "    experimental_factors.single_cell_rna_sequencing, feature=features.assay\n",
-    ")\n",
-    "artifact.labels.add(adata.obs.cell_type, feature=features.cell_type)\n",
-    "artifact.labels.add(adata.obs.assay, feature=features.assay)\n",
-    "artifact.labels.add(adata.obs.tissue, feature=features.tissue)\n",
-    "artifact.labels.add(adata.obs.donor, feature=features.donor)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The artifact is now validated & queryable by everything we linked:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
    "outputs": [],
    "source": [
     "artifact.describe()"
