--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -33,6 +33,7 @@
    "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
+    "from lamindb.validation import AnnDataValidator\n",
     "\n",
     "ln.settings.verbosity = \"hint\"\n",
     "bt.settings.auto_save_parents = False"
@@ -94,6 +95,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validator = AnnDataValidator(adata, var_field=bt.Gene.symbol, obs_fields={\"cell_type\": bt.CellType.name})"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -108,72 +118,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "adata.var.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's inspect the identifiers:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "bt.Gene.inspect(adata.var.index, bt.Gene.symbol)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's first standardize the gene symbols from synonyms:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata.var.index = bt.Gene.standardize(adata.var.index, bt.Gene.symbol)\n",
-    "validated = bt.Gene.validate(adata.var.index, bt.Gene.symbol)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We only want to register data with validated genes:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata_validated = adata[:, validated].copy()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -183,21 +127,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "adata_validated.var[\"ensembl_gene_id\"] = bt.Gene.standardize(\n",
-    "    adata_validated.var.index,\n",
+    "adata.var[\"ensembl_gene_id\"] = bt.Gene.standardize(\n",
+    "    adata.var.index,\n",
     "    field=bt.Gene.symbol,\n",
     "    return_field=bt.Gene.ensembl_gene_id,\n",
     ")\n",
-    "adata_validated.var.index.name = \"symbol\"\n",
-    "adata_validated.var = adata_validated.var.reset_index().set_index(\"ensembl_gene_id\")\n",
-    "adata_validated.var.head()"
+    "# use ensembl_gene_id as the index\n",
+    "adata.var.index.name = \"symbol\"\n",
+    "adata.var = adata.var.reset_index().set_index(\"ensembl_gene_id\")\n",
+    "\n",
+    "# We only want to register data with validated genes\n",
+    "validated = bt.Gene.validate(adata.var.index, bt.Gene.symbol, mute=True)\n",
+    "adata_validated = adata[:, validated].copy()"
    ]
   },
   {
@@ -218,6 +162,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validator = AnnDataValidator(adata_validated, var_field=bt.Gene.ensembl_gene_id, obs_fields={\"cell_type\": bt.CellType.name})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validator.validate()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -228,20 +190,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inspection shows none of the terms are validated:"
+    "Non of the cell types can be automatically registered:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "inspector = bt.CellType.inspect(adata_validated.obs.cell_type)"
+    "validator.register_labels(\"cell_type\")"
    ]
   },
   {
@@ -302,25 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = bt.CellType.validate(adata_validated.obs.cell_type)\n",
-    "assert all(validated)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We don't want to store any of the other metadata columns:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for column in [\"n_genes\", \"percent_mito\", \"louvain\"]:\n",
-    "    adata.obs.drop(column, axis=1)"
+    "validator.validate()"
    ]
   },
   {
@@ -336,48 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimental_factors = bt.ExperimentalFactor.lookup()\n",
-    "organism = bt.Organism.lookup()\n",
-    "features = ln.Feature.lookup()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "artifact = ln.Artifact.from_anndata(\n",
-    "    adata_validated,\n",
-    "    description=\"10x reference adata\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As we do not want to manage the remaining unvalidated terms in registries, we can save and annotate the artifact:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artifact.save()\n",
-    "artifact.features.add_from_anndata(var_field=bt.Gene.ensembl_gene_id)\n",
-    "artifact.labels.add(adata_validated.obs.cell_type, features.cell_type)\n",
-    "artifact.labels.add(organism.human, feature=features.organism)\n",
-    "artifact.labels.add(\n",
-    "    experimental_factors.single_cell_rna_sequencing, feature=features.assay\n",
-    ")\n",
-    "artifact.describe()"
+    "artifact = validator.register_artifact(description=\"10x reference adata\")"
    ]
   },
   {
