--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -144,7 +144,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator = AnnDataValidator(adata, var_field=bt.Gene.ensembl_gene_id, obs_fields={\"donor\": ln.ULabel.name, \"tissue\": bt.Tissue.name, \"cell_type\": bt.CellType.name, \"assay\": bt.ExperimentalFactor.name}, organism=\"human\")"
+    "validator = AnnDataValidator(\n",
+    "    adata, \n",
+    "    var_field=bt.Gene.ensembl_gene_id, \n",
+    "    obs_fields={\n",
+    "        \"donor\": ln.ULabel.name, \n",
+    "        \"tissue\": bt.Tissue.name, \n",
+    "        \"cell_type\": bt.CellType.name, \n",
+    "        \"assay\": bt.ExperimentalFactor.name}, \n",
+    "    organism=\"human\",\n",
+    ")"
    ]
   },
   {
