--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -140,7 +140,7 @@
     "adata.var = adata.var.reset_index().set_index(\"ensembl_gene_id\")\n",
     "\n",
     "# We only want to register data with validated genes\n",
-    "validated = bt.Gene.validate(adata.var.index, bt.Gene.symbol, mute=True)\n",
+    "validated = bt.Gene.validate(adata.var.index, bt.Gene.ensembl_gene_id, mute=True)\n",
     "adata_validated = adata[:, validated].copy()"
    ]
   },
