⬆️ Use ln.Validate.from_

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -79,7 +79,6 @@
    "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
-    "from lamindb.validation import AnnDataValidator\n",
     "\n",
     "ln.settings.verbosity = \"hint\""
    ]
@@ -144,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator = AnnDataValidator(\n",
+    "validator = ln.Validate.from_anndata(\n",
     "    adata, \n",
     "    var_field=bt.Gene.ensembl_gene_id, \n",
     "    obs_fields={\n",
