--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -33,7 +33,6 @@
    "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
-    "from lamindb.validation import AnnDataValidator\n",
     "\n",
     "ln.settings.verbosity = \"hint\"\n",
     "bt.settings.auto_save_parents = False"
@@ -100,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator = AnnDataValidator(adata, var_field=bt.Gene.symbol, obs_fields={\"cell_type\": bt.CellType.name})"
+    "validator = ln.Validate.from_anndata(adata, var_field=bt.Gene.symbol, obs_fields={\"cell_type\": bt.CellType.name})"
    ]
   },
   {
@@ -167,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator = AnnDataValidator(adata_validated, var_field=bt.Gene.ensembl_gene_id, obs_fields={\"cell_type\": bt.CellType.name})"
+    "validator = ln.Validate.from_anndata(adata_validated, var_field=bt.Gene.ensembl_gene_id, obs_fields={\"cell_type\": bt.CellType.name})"
    ]
   },
   {
