--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.register_labels(\"variables\", validated_only=False)"
+    "validator.update_registry(\"variables\", validated_only=False)"
    ]
   },
   {
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.register_labels(\"all\")"
+    "validator.update_registry(\"all\")"
    ]
   },
   {
