--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.register_labels(\"cell_type\")"
+    "validator.update_registry(\"cell_type\")"
    ]
   },
   {
