--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This `AnnData` object is standardized using the [CZI single-cell-curation validator](https://github.com/chanzuckerberg/single-cell-curation) with the same public ontologies that underlie {py:mod}`bionty`.\n",
+    "This `AnnData` object is standardized using the [CZI single-cell-curation annotate](https://github.com/chanzuckerberg/single-cell-curation) with the same public ontologies that underlie {py:mod}`bionty`.\n",
     "\n",
     "```{note}\n",
     "\n",
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator = ln.Validate.from_anndata(\n",
+    "annotate = ln.Annotate.from_anndata(\n",
     "    adata, \n",
     "    var_field=bt.Gene.ensembl_gene_id, \n",
     "    obs_fields={\n",
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.update_registry(\"variables\", validated_only=False)"
+    "annotate.update_registry(\"variables\", validated_only=False)"
    ]
   },
   {
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.update_registry(\"all\")"
+    "annotate.update_registry(\"all\")"
    ]
   },
   {
@@ -179,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.validate()"
+    "annotate.validate()"
    ]
   },
   {
@@ -199,7 +199,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = validator.register_artifact(description=\"Human immune cells from Conde22\")"
+    "artifact = annotate.register_artifact(description=\"Human immune cells from Conde22\")"
    ]
   },
   {
