--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator = ln.Validate.from_anndata(adata, var_field=bt.Gene.symbol, obs_fields={\"cell_type\": bt.CellType.name})"
+    "annotate = ln.Annotate.from_anndata(adata, var_field=bt.Gene.symbol, obs_fields={\"cell_type\": bt.CellType.name})"
    ]
   },
   {
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator = ln.Validate.from_anndata(adata_validated, var_field=bt.Gene.ensembl_gene_id, obs_fields={\"cell_type\": bt.CellType.name})"
+    "annotate = ln.Annotate.from_anndata(adata_validated, var_field=bt.Gene.ensembl_gene_id, obs_fields={\"cell_type\": bt.CellType.name})"
    ]
   },
   {
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.validate()"
+    "annotate.validate()"
    ]
   },
   {
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.update_registry(\"cell_type\")"
+    "annotate.update_registry(\"cell_type\")"
    ]
   },
   {
@@ -259,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.validate()"
+    "annotate.validate()"
    ]
   },
   {
@@ -275,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = validator.register_artifact(description=\"10x reference adata\")"
+    "artifact = annotate.register_artifact(description=\"10x reference adata\")"
    ]
   },
   {
