--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -199,7 +199,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = annotate.register_artifact(description=\"Human immune cells from Conde22\")"
+    "artifact = annotate.annotate_artifact(description=\"Human immune cells from Conde22\")"
    ]
   },
   {
