--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -275,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = annotate.annotate_artifact(description=\"10x reference adata\")"
+    "artifact = annotate.save_artifact(description=\"10x reference adata\")"
    ]
   },
   {
