--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -80,17 +80,9 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.settings.verbosity = \"hint\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.transform.stem_uid = \"Nv48yAceNSh8\"\n",
-    "ln.transform.version = \"1\"\n",
+    "ln.settings.verbosity = \"hint\"\n",
+    "ln.settings.transform.stem_uid = \"Nv48yAceNSh8\"\n",
+    "ln.settings.transform.version = \"1\"\n",
     "ln.track()"
    ]
   },
