--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -42,8 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.transform.stem_uid = \"mfWKm8OtAzp8\"\n",
-    "ln.transform.version = \"1\"\n",
+    "ln.settings.transform.stem_uid = \"mfWKm8OtAzp8\"\n",
+    "ln.settings.transform.version = \"1\"\n",
     "ln.track()"
    ]
   },
