--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -48,13 +48,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -90,16 +83,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ingest an artifact"
+    "## Populate metadata registries based on an artifact"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us look at the standardized data of [Conde _et al._, Science (2022)](https://doi.org/10.1126/science.abl5197), available from [CZ CELLxGENE](https://cellxgene.cziscience.com/).\n",
-    "\n",
-    "By calling {func}`~lamindb.core.datasets.anndata_human_immune_cells`, we load a subsampled version of the [collection from CZ CELLxGENE](https://cellxgene.cziscience.com/collections/62ef75e4-cbea-454e-a0ce-998ec40223d3) and pre-populate the corresponding LaminDB registries: {class}`~lamindb.Feature`, {class}`~lamindb.ULabel`, {class}`~bionty.Gene`, {class}`~bionty.CellType`, {class}`~bionty.CellLine`, {class}`~bionty.ExperimentalFactor`."
+    "Let us look at the standardized data of [Conde _et al._, Science (2022)](https://doi.org/10.1126/science.abl5197), [available from CELLxGENE](https://cellxgene.cziscience.com/collections/62ef75e4-cbea-454e-a0ce-998ec40223d3). {func}`~lamindb.core.datasets.anndata_human_immune_cells` loads a subsampled version:"
    ]
   },
   {
@@ -120,13 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This `AnnData` object is standardized using the [CZI single-cell-curation annotate](https://github.com/chanzuckerberg/single-cell-curation) with the same public ontologies that underlie {py:mod}`bionty`.\n",
-    "\n",
-    "```{note}\n",
-    "\n",
-    "In the [next guide](/scrna2), we'll curate a non-standardized collection.\n",
-    "\n",
-    "```"
+    "Let's validate & annotate this artifact:"
    ]
   },
   {
@@ -142,7 +127,8 @@
     "        \"donor\": ln.ULabel.name, \n",
     "        \"tissue\": bt.Tissue.name, \n",
     "        \"cell_type\": bt.CellType.name, \n",
-    "        \"assay\": bt.ExperimentalFactor.name}, \n",
+    "        \"assay\": bt.ExperimentalFactor.name\n",
+    "    }, \n",
     "    organism=\"human\",\n",
     ")"
    ]
@@ -260,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Access the underlying artifact like so:"
+    "Access the underlying artifacts like so:"
    ]
   },
   {
@@ -269,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection.artifact"
+    "collection.artifacts"
    ]
   },
   {
