--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -35,15 +35,7 @@
     "import bionty as bt\n",
     "\n",
     "ln.settings.verbosity = \"hint\"\n",
-    "bt.settings.auto_save_parents = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "bt.settings.auto_save_parents = False\n",
     "ln.settings.transform.stem_uid = \"ManDYgmftZ8C\"\n",
     "ln.settings.transform.version = \"1\"\n",
     "ln.track()"
@@ -53,14 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standardize a data shard"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's now consider a collection with less-well curated features:"
+    "Let's now consider a less-well curated dataset:"
    ]
   },
   {
@@ -106,21 +91,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Standardize & validate genes ![](https://img.shields.io/badge/Validate-10b981) "
+    "## Standardize & validate genes ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This data shard is indexed by gene symbols which we'll want to map on Ensemble ids:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now that all symbols are validated, let's convert them to Ensembl ids via {meth}`~docs:lamindb.core.CanValidate.standardize`. Note that this is an ambiguous mapping and the first match is kept because the `keep` arg of `.standardize()` defaults to `\"first\"`:"
+    "Let's convert Gene symbols to Ensembl ids via {meth}`~docs:lamindb.core.CanValidate.standardize`. Note that this is a non-unique mapping and the first match is kept because the `keep` parameter in `.standardize()` defaults to `\"first\"`:"
    ]
   },
   {
@@ -138,7 +116,7 @@
     "adata.var.index.name = \"symbol\"\n",
     "adata.var = adata.var.reset_index().set_index(\"ensembl_gene_id\")\n",
     "\n",
-    "# We only want to register data with validated genes\n",
+    "# we only want to save data with validated genes\n",
     "validated = bt.Gene.validate(adata.var.index, bt.Gene.ensembl_gene_id, mute=True)\n",
     "adata_validated = adata[:, validated].copy()"
    ]
@@ -182,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Standardize & validate cell types ![](https://img.shields.io/badge/Validate-10b981) "
+    "## Standardize & validate cell types ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
   {
@@ -330,7 +308,7 @@
    "outputs": [],
    "source": [
     "collection_v2 = ln.Collection(\n",
-    "    [artifact, collection_v1.artifact],\n",
+    "    [artifact, collection_v1.artifacts[0]],\n",
     "    is_new_version_of=collection_v1,\n",
     ")\n",
     "collection_v2.save()\n",
