--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -122,8 +122,8 @@
    "source": [
     "annotate = ln.Annotate.from_anndata(\n",
     "    adata, \n",
-    "    var_field=bt.Gene.ensembl_gene_id, \n",
-    "    obs_fields={\n",
+    "    var_index=bt.Gene.ensembl_gene_id, \n",
+    "    categoricals={\n",
     "        \"donor\": ln.ULabel.name, \n",
     "        \"tissue\": bt.Tissue.name, \n",
     "        \"cell_type\": bt.CellType.name, \n",
@@ -139,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate.update_registry(\"variables\", validated_only=False)"
+    "annotate.add_new_from_var_index()"
    ]
   },
   {
@@ -148,7 +148,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate.update_registry(\"all\")"
+    "annotate.validate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotate.add_new_from(\"donor\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotate.add_validated_from(\"all\")"
    ]
   },
   {
