--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate = ln.Annotate.from_anndata(adata, var_field=bt.Gene.symbol, obs_fields={\"cell_type\": bt.CellType.name})"
+    "annotate = ln.Annotate.from_anndata(adata, var_index=bt.Gene.symbol, categoricals={\"cell_type\": bt.CellType.name})"
    ]
   },
   {
@@ -144,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate = ln.Annotate.from_anndata(adata_validated, var_field=bt.Gene.ensembl_gene_id, obs_fields={\"cell_type\": bt.CellType.name})"
+    "annotate = ln.Annotate.from_anndata(adata_validated, var_index=bt.Gene.ensembl_gene_id, categoricals={\"cell_type\": bt.CellType.name})"
    ]
   },
   {
@@ -167,23 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Non of the cell types can be automatically registered:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "annotate.update_registry(\"cell_type\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let us search the cell type names from the public ontology, and add the name found in the `AnnData` object as a synonym to the top match found in the public ontology."
+    "Since none of the cell types are validate, let us search the cell type names from the public ontology, and add the name found in the `AnnData` object as a synonym to the top match found in the public ontology."
    ]
   },
   {
