--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -11,19 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convert a number of array shards to a single array store"
+    "# Transform a number of array shards to a single array store"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the previous notebooks, we've seen how to incrementally create a collection and train models on it.\n",
-    "Once we have a collection of validated array shards, we might want to concatenate them to one big array store.\n",
-    "This is what the CELLxGENE team does to create Census: a high number of `.h5ad` files are concatenated to give rise to a single TileDB-SOMA array store.\n",
-    "A requirement is duplicating the data that's present in a collection of `.h5ad` files, but doing so speeds up ad-hoc queries for slices for arbitrary metadata.\n",
+    "In the previous notebooks, we've seen how to incrementally create a collection of datasets and train models on it.\n",
     "\n",
-    "See how this looks for `cellxgene` here: {doc}`docs:cellxgene`."
+    "In some situations we want to concatenate all datasets to one big array store to speed up ad-hoc queries for slices for arbitrary metadata from the cloud.\n",
+    "\n",
+    "This is what CELLxGENE does to create Census: a number of `.h5ad` files are concatenated to give rise to a single TileDB-SOMA array store. See how this looks for `cellxgene` here: {doc}`docs:cellxgene`."
    ]
   }
  ],
