--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -20,20 +20,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You'll learn how to manage a growing number of scRNA-seq data shards as a single queryable collection.\n",
+    "You'll learn how to manage a growing number of scRNA-seq datasets as a single queryable & batch-iterable collection.\n",
     "\n",
-    "Along the way, you'll see how to create reports, leverage data lineage, and query individual data shards stored as files.\n",
+    "Along the way, you'll see how to create reports, leverage data lineage, and query individual datasets.\n",
     "\n",
     "If you're only interested in _using_ a large curated scRNA-seq collection, see the [CELLxGENE Census guide](docs:cellxgene).\n",
     "\n",
     "Here, you will:\n",
     "\n",
     "1. create an {class}`~lamindb.Artifact` from an `AnnData` object and seed a growing {class}`~lamindb.Collection` with it (![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey), current page)\n",
-    "2. append a new data batch (a new `.h5ad` file) and create a new version of this collection ([![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)](/scrna2))\n",
+    "2. append a new dataset and create a new version of this collection ([![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)](/scrna2))\n",
     "3. query & inspect artifacts by metadata individually ([![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)](/scrna3))\n",
-    "4. load the joint collection into memory and save analytical results ([![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)](/scrna4))\n",
-    "5. iterate over the collection, train a model, store a derived representation ([![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)](/scrna5))\n",
-    "6. discuss converting a number of artifacts to a single TileDB SOMA store of the same data ([![scrna6/6](https://img.shields.io/badge/scrna6/6-lightgrey)](/scrna6))\n",
+    "4. load the joint collection and save analytical results ([![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)](/scrna4))\n",
+    "5. iterate over the collection and train a model ([![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)](/scrna5))\n",
+    "6. discuss converting a collection to a single TileDB SOMA store of the same data ([![scrna6/6](https://img.shields.io/badge/scrna6/6-lightgrey)](/scrna6))\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
@@ -124,10 +124,10 @@
     "    adata, \n",
     "    var_index=bt.Gene.ensembl_gene_id, \n",
     "    categoricals={\n",
-    "        \"donor\": ln.ULabel.name, \n",
-    "        \"tissue\": bt.Tissue.name, \n",
-    "        \"cell_type\": bt.CellType.name, \n",
-    "        \"assay\": bt.ExperimentalFactor.name\n",
+    "        adata.obs.donor.name: ln.ULabel.name, \n",
+    "        adata.obs.tissue.name: bt.Tissue.name, \n",
+    "        adata.obs.cell_type.name: bt.CellType.name, \n",
+    "        adata.obs.assay.name: bt.ExperimentalFactor.name\n",
     "    }, \n",
     "    organism=\"human\",\n",
     ")"
