--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate = ln.Annotate.from_anndata(adata, var_index=bt.Gene.symbol, categoricals={\"cell_type\": bt.CellType.name})"
+    "annotate = ln.Annotate.from_anndata(adata, var_index=bt.Gene.symbol, categoricals={adata.obs.cell_type.name: bt.CellType.name})"
    ]
   },
   {
@@ -253,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Append the shard to the collection"
+    "## Append the dataset to the collection"
    ]
   },
   {
