♻️ Fix label_keys to obs_keys

--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with collection.mapped(label_keys=[\"cell_type\"], join=\"inner\") as dataset:\n",
+    "with collection.mapped(obs_keys=[\"cell_type\"], join=\"inner\") as dataset:\n",
     "    print(len(dataset.var_joint))"
    ]
   },
@@ -127,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = collection.mapped(label_keys=[\"cell_type\"], join=\"outer\")"
+    "dataset = collection.mapped(obs_keys=[\"cell_type\"], join=\"outer\")"
    ]
   },
   {
@@ -262,7 +262,7 @@
     ":::{dropdown} In practice, use a context manager\n",
     "\n",
     "```\n",
-    "with collection.mapped(label_keys=[\"cell_type\"]) as dataset:\n",
+    "with collection.mapped(obs_keys=[\"cell_type\"]) as dataset:\n",
     "    sampler = WeightedRandomSampler(\n",
     "        weights=dataset.get_label_weights(\"cell_type\"), num_samples=len(dataset)\n",
     "    )\n",
