--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -33,9 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lamindb as ln\n",
-    "import anndata as ad\n",
-    "import numpy as np"
+    "import lamindb as ln"
    ]
   },
   {
