--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna2.ipynb)\n",
-    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?id=agayZTonayqAz8)"
+    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/transform/agayZTonayqAz8)"
    ]
   },
   {
@@ -32,8 +32,7 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import bionty as bt\n",
-    "import anndata as ad"
+    "import bionty as bt"
    ]
   },
   {
