--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -32,8 +32,7 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import bionty as bt\n",
-    "import anndata as ad"
+    "import bionty as bt"
    ]
   },
   {
