--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "query = ln.Artifact.filter(\n",
     "    organism=organism.human,\n",
-    "    cell_types=cell_types.gamma_delta_t_cell,\n",
+    "    cell_types=cell_types.classical_monocyte,\n",
     ")"
    ]
   },
