--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "query = ln.Artifact.filter(\n",
     "    organism=organism.human,\n",
-    "    cell_types=tissues.bone_marrow,\n",
+    "    tissues=tissues.bone_marrow,\n",
     ")"
    ]
   },
