--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -103,7 +103,7 @@
    "outputs": [],
    "source": [
     "organism = bt.Organism.lookup()\n",
-    "cell_types = bt.CellType.lookup()"
+    "tissues = bt.Tissue.lookup()"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "source": [
     "query = ln.Artifact.filter(\n",
     "    organism=organism.human,\n",
-    "    cell_types=cell_types.gamma_delta_t_cell,\n",
+    "    tissues=tissues.bone_marrow,\n",
     ")"
    ]
   },
