--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Transform.filter(created_by=users.testuser1).search(\"scrna\")"
+    "ln.Transform.filter(created_by=users.testuser1).search(\"scrna\").df()"
    ]
   },
   {
